feat: solved assignment 4
